[package]
name = "transmission-proxy"
description = "An OAuth2 proxy for the Transmission BitTorrent client"
authors = ["Vincent Tavernier <vince.tavernier@gmail.com>"]
version = "0.1.0"
edition = "2021"
default-run = "transmission-proxy"

[dependencies]
base64 = "0.13"
bcrypt = "0.10"
clap = { version = "3.1", features = ["derive", "env"] }
color-eyre = "0.6"
cookie = { version = "0.16", features = ["percent-encode"] }
handlebars = "4.2"
hmac = "0.12"
hyper = { version = "0.14", features = ["full"] }
jwt = "0.16"
rand = "0.8"
regex = "1.5"
secrecy = "0.8"
serde = { version = "1", features = ["derive"] }
serde_bencode = "0.2"
serde_bytes = "0.11"
serde_json = "1"
serde_regex = "1.1"
serde_yaml = "0.8"
sha2 = "0.10"
strum = { version = "0.23", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.17", features = ["net", "rt-multi-thread"] }
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.2"
urlencoding = "2.1"
