[package]
name = "transmission-proxy"
version = "1.2.1"
description = "An OAuth2 proxy for the Transmission BitTorrent client"
authors = ["Alixinne <alixinne@pm.me>"]
edition = "2021"
default-run = "transmission-proxy"

[dependencies]
transmission-rpc-client = "1.2.1"

async-session = "3.0.0"
axum = { version = "0.6", features = ["headers"] }
base64 = "0.21"
bcrypt = "0.15"
clap = { version = "4.4", features = ["derive", "env"] }
color-eyre = "0.6"
cookie = { version = "0.17", features = ["percent-encode"] }
handlebars = "4.4"
hmac = "0.12"
hyper = { version = "1.0", features = ["full"] }
jsonpath = "0.1.1"
jwt = "0.16"
oauth2 = "4.4.2"
rand = "0.8"
regex = "1.10"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
secrecy = "0.8"
serde = { version = "1", features = ["derive"] }
serde_bencode = "0.2"
serde_bytes = "0.11"
serde_json = "1"
serde_regex = "1.1"
serde_yaml = "0.9"
sha2 = "0.10"
strum = { version = "0.25", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.33", features = ["net", "rt-multi-thread"] }
tower-cookies = "0.9"
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.4"
urlencoding = "2.1"
