[package]
name = "transmission-rpc-client"
version = "1.2.1"
description = "Client library for the Transmission BitTorrent daemon RPC API"
authors = ["Alixinne <alixinne@pm.me>"]
edition = "2021"

[[example]]
name = "simple"
required-features = ["client"]

[[example]]
name = "count_tracker_errors"
required-features = ["client"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.27", features = ["derive"] }

# client features
reqwest = { version = "0.12", optional = true, features = ["json"] }
thiserror = { version = "2", optional = true }
url = { version = "2.4", optional = true }

[features]
default = []
client = ["reqwest", "thiserror", "url"]

[dev-dependencies]
anyhow = "1"
tokio = { version = "1.33", features = ["macros"] }
